--- a/assets/scss/components/blog/_widget-slideshow.scss
+++ b/assets/scss/components/blog/_widget-slideshow.scss
@@ -106,6 +106,7 @@
   .c-hero__background {
     will-change: transform;
     backface-visibility: hidden;
+    background-color: #333;
   }
 
   .c-hero__background-mask {
